ecmascript/parser/tests/test262-error-references/fail/0f512c4376a62de8.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/0f512c4376a62de8.js:1:3
  |
1 | a enum;
  |   ^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/0f512c4376a62de8.js:1:1
  |
1 | a enum;
  | ^

